--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ project(ldd-repl)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
-include_directories("elf_file", "util")
+include_directories("src/FileDescriptor")
 
-add_executable(ldd-repl
-        main.cpp elf_file/elf_file.cpp elf_file/elf_file.h util/util.cpp util/util.h)
+add_executable(
+        ldd-repl
+        main.cpp
+        src/FileDescriptor/FileDescriptor.cpp
+        src/FileDescriptor/FileDescriptor.h
+)
